# src/swagger.json
@@ -1,8 +1,8 @@
 {
    "openapi": "3.0.0",
    "info": {
-      "title": "SellCar Documentation",
-      "description": "This is an API SellCar",
+      "title": "Rentx Documentation",
+      "description": "This is an API Rentx",
       "version": "1.0.0",
       "contact": {
          "email": "tamara@organ.dev.br"
@@ -11,7 +11,9 @@
    "paths": {
       "/categories": {
          "post": {
-            "tags": ["Category"],
+            "tags": [
+               "Category"
+            ],
             "summary": "Create a category",
             "description": "Create a new category",
             "requestBody": {
@@ -22,7 +24,7 @@
                         "properties": {
                            "name": {
                               "type": "string"
-                           }, 
+                           },
                            "description": {
                               "type": "string"
                            }
@@ -34,7 +36,7 @@
                      }
                   }
                }
-            }, 
+            },
             "responses": {
                "201": {
                   "description": "Category created successfully!"
@@ -45,12 +47,111 @@
             }
          },
          "get": {
-            "tags": ["Category"],
+            "tags": [
+               "Category"
+            ],
             "summary": "List all categories",
             "description": "List all categories",
             "responses": {
                "200": {
-                  "description": "Success", 
+                  "description": "Success",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "array",
+                           "items": {
+                              "type": "object",
+                              "properties": {
+                                 "name": {
+                                    "type": "string"
+                                 },
+                                 "description": {
+                                    "type": "string"
+                                 }
+                              }
+                           }
+                        }
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "/categories/import": {
+         "post": {
+            "tags": [
+               "Category"
+            ],
+            "summary": "Importar lista de categorias",
+            "description": "Importar um arquivo que contem uma lista de categorias",
+            "requestBody": {
+               "content": {
+                  "multipart/form-data": {
+                     "schema": {
+                        "type": "object",
+                        "properties": {
+                           "file": {
+                              "type": "string",
+                              "format": "binary"
+                           }
+                        }
+                     }
+                  }
+               }
+            },
+            "responses": {
+               "201": {
+                  "description": "Import successfully performed!"
+               }
+            }
+         }
+      },
+      "/specifications": {
+         "post": {
+            "tags": [
+               "Specification"
+            ],
+            "summary": "Create a specification",
+            "description": "Create a new specification",
+            "requestBody": {
+               "content": {
+                  "application/json": {
+                     "schema": {
+                        "type": "object",
+                        "properties": {
+                           "name": {
+                              "type": "string"
+                           },
+                           "description": {
+                              "type": "string"
+                           }
+                        },
+                        "example": {
+                           "name": "Specification name sample",
+                           "description": "Specification description sample"
+                        }
+                     }
+                  }
+               }
+            },
+            "responses": {
+               "201": {
+                  "description": "Specification created successfully!"
+               },
+               "500": {
+                  "description": "Specification already exists!"
+               }
+            }
+         },
+         "get": {
+            "tags": [
+               "Specification"
+            ],
+            "summary": "List all specifications",
+            "description": "List all specifications",
+            "responses": {
+               "200": {
+                  "description": "Success",
                   "content": {
                      "application/json": {
                         "schema": {
